--- a/frontend/src/app/company-list/company-list.component.html
+++ b/frontend/src/app/company-list/company-list.component.html
@@ -1,8 +1,8 @@
-<div style="margin: 50px" >
+<div style="margin: 35px" >
   <h2>Companies</h2>
 
   <div>
-    <a mat-raised-button [routerLink]="['/company-form']">Create Company</a>
+    <a mat-raised-button [routerLink]="['/company-form']">Add Company</a>
   </div>
 
   <h2>Search for companies</h2>
@@ -15,38 +15,40 @@
   <div class="spinner-container" *ngIf="dataSource.loading$ | async">
     <mat-spinner></mat-spinner>
   </div>
-  <mat-table class="lessons-table mat-elevation-z8" [dataSource]="dataSource">
+  <table mat-table class="companies-table mat-elevation-z8" [dataSource]="dataSource">
     <ng-container matColumnDef="orb_num">
-      <mat-header-cell *matHeaderCellDef>#</mat-header-cell>
-      <mat-cell *matCellDef="let Company_API_All">{{Company_API_All.orb_num}}</mat-cell>
+      <th mat-header-cell *matHeaderCellDef>#</th>
+      <td mat-cell *matCellDef="let Company_API_All">{{Company_API_All.orb_num}}</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
-      <mat-cell class="description-cell"
-                *matCellDef="let Company_API_All">{{Company_API_All.name}}</mat-cell>
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell class="description-cell"
+                *matCellDef="let Company_API_All"><img src="{{Company_API_All.favicon}}" width="50px">{{Company_API_All.name}}</td>
     </ng-container>
 
     <ng-container matColumnDef="country">
-      <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-      <mat-cell class="duration-cell"
-                *matCellDef="let Company_API_All">{{Company_API_All.country}}</mat-cell>
+      <th mat-header-cell *matHeaderCellDef>Country</th>
+      <td mat-cell class="duration-cell"
+                *matCellDef="let Company_API_All">{{Company_API_All.country}}</td>
     </ng-container>
     <ng-container matColumnDef="city">
-      <mat-header-cell *matHeaderCellDef>City</mat-header-cell>
-      <mat-cell class="duration-cell"
-                *matCellDef="let Company_API_All">{{Company_API_All.city}}</mat-cell>
+      <th mat-header-cell *matHeaderCellDef>City</th>
+      <td mat-cell class="duration-cell"
+                *matCellDef="let Company_API_All">{{Company_API_All.city}}</td>
     </ng-container>
     <ng-container matColumnDef="address">
-    <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-    <mat-cell class="duration-cell"
-              *matCellDef="let Company_API_All">{{Company_API_All.address}}</mat-cell>
-  </ng-container>
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell class="duration-cell"
+                *matCellDef="let Company_API_All">{{Company_API_All.address}}</td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
-    <mat-row *matRowDef="let row; columns: displayedColumns"
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"
              (click)="onRowClicked(row)">
-    </mat-row>
-  </mat-table>
+    </tr>
+
+  </table>
   <mat-paginator [length]="length"
                  [pageSize]="pageSize"
                  [pageSizeOptions]="[5, 10, 50, 100]"
