--- a/frontend/src/app/company-view/company-view.component.scss
+++ b/frontend/src/app/company-view/company-view.component.scss
@@ -1,1 +1,48 @@
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 20%;
+  padding: 0 10px;
+}
+
+.row { margin: 0 -5px; }
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.card-info {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 8px;
+  text-align: center;
+  background-color: #b9cdda;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.card-detail {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #d7dae5;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  //height: 280px;
+}
+
+.card-title { text-align: center; }
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
 
