--- a/frontend/src/app/company-form/company-form.component.html
+++ b/frontend/src/app/company-form/company-form.component.html
@@ -1,131 +1,131 @@
-<div style="margin: 35px" >
-<form [formGroup]="companyFormGroup" (ngSubmit)="createOrUpdateCompany()">
-  <mat-form-field>
-    <mat-label>Name</mat-label>
-    <input matInput type="text" placeholder="" formControlName="name">
-    <mat-error *ngIf="companyFormGroup.controls['name']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--<div style="margin: 35px" >-->
+<!--<form [formGroup]="companyFormGroup" (ngSubmit)="createOrUpdateCompany()">-->
+<!--  <mat-form-field>-->
+<!--    <mat-label>Name</mat-label>-->
+<!--    <input matInput type="text" placeholder="" formControlName="name">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['name']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Description</mat-label>
-    <input matInput type="text" placeholder="" formControlName="description">
-    <mat-error *ngIf="companyFormGroup.controls['description']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Description</mat-label>-->
+<!--    <input matInput type="text" placeholder="" formControlName="description">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['description']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Country</mat-label>
-    <input matInput type="text" placeholder="" formControlName="country">
-    <mat-error *ngIf="companyFormGroup.controls['country']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Country</mat-label>-->
+<!--    <input matInput type="text" placeholder="" formControlName="country">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['country']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>City</mat-label>
-    <input matInput type="text" placeholder="" formControlName="city">
-    <mat-error *ngIf="companyFormGroup.controls['city']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>City</mat-label>-->
+<!--    <input matInput type="text" placeholder="" formControlName="city">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['city']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>ZIP code</mat-label>
-    <input matInput type="number" placeholder="" formControlName="zip">
-    <mat-error *ngIf="companyFormGroup.controls['zip']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>ZIP code</mat-label>-->
+<!--    <input matInput type="number" placeholder="" formControlName="zip">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['zip']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Address</mat-label>
-    <input matInput type="text" placeholder="" formControlName="address1">
-    <mat-error *ngIf="companyFormGroup.controls['address1']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Address</mat-label>-->
+<!--    <input matInput type="text" placeholder="" formControlName="address1">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['address1']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Phone</mat-label>
-    <input matInput type="tel" placeholder="" formControlName="phone">
-    <mat-error *ngIf="companyFormGroup.controls['phone']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Phone</mat-label>-->
+<!--    <input matInput type="tel" placeholder="" formControlName="phone">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['phone']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Email</mat-label>
-    <input matInput type="email" placeholder="" formControlName="email">
-    <mat-error *ngIf="companyFormGroup.controls['email']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Email</mat-label>-->
+<!--    <input matInput type="email" placeholder="" formControlName="email">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['email']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Website</mat-label>
-    <input matInput type="url" placeholder="" formControlName="website">
-    <mat-error *ngIf="companyFormGroup.controls['website']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Website</mat-label>-->
+<!--    <input matInput type="url" placeholder="" formControlName="website">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['website']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>LinkedIn Link</mat-label>
-    <input matInput type="url" placeholder="" formControlName="linkedin_account">
-    <mat-error *ngIf="companyFormGroup.controls['linkedin_account']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>LinkedIn Link</mat-label>-->
+<!--    <input matInput type="url" placeholder="" formControlName="linkedin_account">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['linkedin_account']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Facebook Link</mat-label>
-    <input matInput type="url" placeholder="" formControlName="facebook_account">
-    <mat-error *ngIf="companyFormGroup.controls['facebook_account']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Facebook Link</mat-label>-->
+<!--    <input matInput type="url" placeholder="" formControlName="facebook_account">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['facebook_account']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Twitter Link</mat-label>
-    <input matInput type="url" placeholder="" formControlName="twitter_account">
-    <mat-error *ngIf="companyFormGroup.controls['twitter_account']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Twitter Link</mat-label>-->
+<!--    <input matInput type="url" placeholder="" formControlName="twitter_account">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['twitter_account']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Number of Employees</mat-label>
-    <input matInput type="number" placeholder="" formControlName="employees">
-    <mat-error *ngIf="companyFormGroup.controls['employees']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Number of Employees</mat-label>-->
+<!--    <input matInput type="number" placeholder="" formControlName="employees">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['employees']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Revenue</mat-label>
-    <input matInput type="number" placeholder="" formControlName="revenue">
-    <mat-error *ngIf="companyFormGroup.controls['revenue']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Revenue</mat-label>-->
+<!--    <input matInput type="number" placeholder="" formControlName="revenue">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['revenue']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-form-field>
-    <mat-label>Year founded</mat-label>
-    <input matInput type="number" placeholder="" formControlName="year_founded">
-    <mat-error *ngIf="companyFormGroup.controls['year_founded']">
-      Title is required
-    </mat-error>
-  </mat-form-field>
+<!--  <mat-form-field>-->
+<!--    <mat-label>Year founded</mat-label>-->
+<!--    <input matInput type="number" placeholder="" formControlName="year_founded">-->
+<!--    <mat-error *ngIf="companyFormGroup.controls['year_founded']">-->
+<!--      Title is required-->
+<!--    </mat-error>-->
+<!--  </mat-form-field>-->
 
-  <mat-card-actions align="start">
-    <button mat-raised-button color="primary" [disabled]="!companyFormGroup.valid" (click)="createOrUpdateCompany()" [routerLink]="'/company-list'">Submit</button>
-  </mat-card-actions>
+<!--  <mat-card-actions align="start">-->
+<!--    <button mat-raised-button color="primary" [disabled]="!companyFormGroup.valid" (click)="createOrUpdateCompany()" [routerLink]="'/company-list'">Submit</button>-->
+<!--  </mat-card-actions>-->
 
-  <mat-card-actions align="start">
-    <button mat-raised-button color="primary" [routerLink]="'/company-list'">Cancel</button>
-  </mat-card-actions>
-</form>
-</div>
+<!--  <mat-card-actions align="start">-->
+<!--    <button mat-raised-button color="primary" [routerLink]="'/company-list'">Cancel</button>-->
+<!--  </mat-card-actions>-->
+<!--</form>-->
+<!--</div>-->
