--- a/frontend/src/app/company-list/company-list.component.html
+++ b/frontend/src/app/company-list/company-list.component.html
@@ -1,58 +1,58 @@
-<div style="margin: 35px" >
-  <h2>Companies</h2>
+<!--<div style="margin: 35px" >-->
+<!--  <h2>Companies</h2>-->
 
-  <div>
-    <a mat-raised-button [routerLink]="['/company-form']">Add Company</a>
-  </div>
+<!--  <div>-->
+<!--    <a mat-raised-button [routerLink]="['/company-form']">Add Company</a>-->
+<!--  </div>-->
 
-  <h2>Search for companies</h2>
+<!--  <h2>Search for companies</h2>-->
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Search</mat-label>
-    <input matInput placeholder="z.B. avl" [formControl]="filterFormControlName">
-  </mat-form-field>
+<!--  <mat-form-field class="example-full-width">-->
+<!--    <mat-label>Search</mat-label>-->
+<!--    <input matInput placeholder="z.B. avl" [formControl]="filterFormControlName">-->
+<!--  </mat-form-field>-->
 
-  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-    <mat-spinner></mat-spinner>
-  </div>
-  <table mat-table class="companies-table mat-elevation-z8" [dataSource]="dataSource">
-    <ng-container matColumnDef="orb_num">
-      <th mat-header-cell *matHeaderCellDef>#</th>
-      <td mat-cell *matCellDef="let Company_API_All">{{Company_API_All.orb_num}}</td>
-    </ng-container>
+<!--  <div class="spinner-container" *ngIf="dataSource.loading$ | async">-->
+<!--    <mat-spinner></mat-spinner>-->
+<!--  </div>-->
+<!--  <table mat-table class="companies-table mat-elevation-z8" [dataSource]="dataSource">-->
+<!--    <ng-container matColumnDef="orb_num">-->
+<!--      <th mat-header-cell *matHeaderCellDef>#</th>-->
+<!--      <td mat-cell *matCellDef="let Company_API_All">{{Company_API_All.orb_num}}</td>-->
+<!--    </ng-container>-->
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell class="description-cell"
-                *matCellDef="let Company_API_All"><img src="{{Company_API_All.favicon}}" width="50px">{{Company_API_All.name}}</td>
-    </ng-container>
+<!--    <ng-container matColumnDef="name">-->
+<!--      <th mat-header-cell *matHeaderCellDef>Name</th>-->
+<!--      <td mat-cell class="description-cell"-->
+<!--                *matCellDef="let Company_API_All"><img src="{{Company_API_All.favicon}}" width="50px">{{Company_API_All.name}}</td>-->
+<!--    </ng-container>-->
 
-    <ng-container matColumnDef="country">
-      <th mat-header-cell *matHeaderCellDef>Country</th>
-      <td mat-cell class="duration-cell"
-                *matCellDef="let Company_API_All">{{Company_API_All.country}}</td>
-    </ng-container>
-    <ng-container matColumnDef="city">
-      <th mat-header-cell *matHeaderCellDef>City</th>
-      <td mat-cell class="duration-cell"
-                *matCellDef="let Company_API_All">{{Company_API_All.city}}</td>
-    </ng-container>
-    <ng-container matColumnDef="address">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell class="duration-cell"
-                *matCellDef="let Company_API_All">{{Company_API_All.address}}</td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<!--    <ng-container matColumnDef="country">-->
+<!--      <th mat-header-cell *matHeaderCellDef>Country</th>-->
+<!--      <td mat-cell class="duration-cell"-->
+<!--                *matCellDef="let Company_API_All">{{Company_API_All.country}}</td>-->
+<!--    </ng-container>-->
+<!--    <ng-container matColumnDef="city">-->
+<!--      <th mat-header-cell *matHeaderCellDef>City</th>-->
+<!--      <td mat-cell class="duration-cell"-->
+<!--                *matCellDef="let Company_API_All">{{Company_API_All.city}}</td>-->
+<!--    </ng-container>-->
+<!--    <ng-container matColumnDef="address">-->
+<!--      <th mat-header-cell *matHeaderCellDef>Name</th>-->
+<!--      <td mat-cell class="duration-cell"-->
+<!--                *matCellDef="let Company_API_All">{{Company_API_All.address}}</td>-->
+<!--    </ng-container>-->
+<!--    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>-->
 
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"
-             (click)="onRowClicked(row)">
-    </tr>
+<!--    <tr mat-row *matRowDef="let row; columns: displayedColumns"-->
+<!--             (click)="onRowClicked(row)">-->
+<!--    </tr>-->
 
-  </table>
-  <mat-paginator [length]="length"
-                 [pageSize]="pageSize"
-                 [pageSizeOptions]="[5, 10, 50, 100]"
-                 (page)="handlePageEvent($event)"
-                 aria-label="Select page"></mat-paginator>
-</div>
+<!--  </table>-->
+<!--  <mat-paginator [length]="length"-->
+<!--                 [pageSize]="pageSize"-->
+<!--                 [pageSizeOptions]="[5, 10, 50, 100]"-->
+<!--                 (page)="handlePageEvent($event)"-->
+<!--                 aria-label="Select page"></mat-paginator>-->
+<!--</div>-->
 
