--- a/frontend/src/app/vacancies-view/vacancies-view.component.html
+++ b/frontend/src/app/vacancies-view/vacancies-view.component.html
@@ -1,26 +1,37 @@
-<mat-card class="position-card">
-  <mat-card-header>
-    <mat-card-title class="position-title">{{this.vacancy.title}}</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <p class="position-description">Job Description: {{this.vacancy.description}}</p>
-    <mat-divider></mat-divider>
-    <div class="position-company">
-      <p>Company: {{this.vacancy.company.name}}</p>
-    </div>
-    <div class="approval-status">
-      <p>Approval Status: {{this.vacancy.approval_status}}</p>
-    </div>
-    <mat-divider></mat-divider>
-    <div *ngIf="!this.isLecturer">
-      <button mat-button color="primary" (click)="report_as_internship(this.vacancy.pk)">Report as Internship</button>
-    </div>
-    <button mat-button color="primary" [routerLink]="'/vacancies-list/'">Back</button>
-    <div *ngIf="this.isLecturer">
-      <button mat-button color="primary" (click)="approve()">Accept</button>
-      <button mat-button color="primary" (click)="reject()">Reject</button>
-      <button mat-button color="primary" (click)="close()" [routerLink]="'/vacancies-list/'">Closed</button>
-      <button mat-button color="primary" (click)="delete()" [routerLink]="'/vacancies-list/'">Delete</button>
-    </div>
-  </mat-card-content>
-</mat-card>
+<div style="margin: 35px">
+  <div style="margin-bottom: 10px">
+    <a mat-raised-button [routerLink]="['/vacancies-list']">Back</a>
+  </div>
+  <mat-card class="card-info">
+    <mat-card-content>
+      <h1>
+          {{vacancy.title}}
+      </h1>
+      <p>{{vacancy.description}}</p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="card-info">
+    <mat-card-content>
+      <h2>
+        <div>
+          Approval Status
+        </div>
+      </h2>
+      <p>{{vacancy.approval_status}}</p>
+      <h2>
+        <div>
+          Company
+        </div>
+      </h2>
+      <p>{{vacancy.company.name}}</p>
+    </mat-card-content>
+  </mat-card>
+  <div *ngIf="this.isLecturer" style="margin-top: 10px">
+    <button mat-raised-button style="margin-right: 10px" (click)="close()" [routerLink]="'/vacancies-list/'">Closed</button>
+    <button mat-raised-button style="margin-right: 10px" color="primary" (click)="approve()">Approve</button>
+    <button mat-raised-button style="margin-right: 10px" color="warn" (click)="reject()">Reject</button>
+  </div>
+</div>
+
+
