--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -13,3 +13,10 @@ a {
   justify-content: center;
   text-align: center;
 }
+
+.custom-button {
+  border: 1px solid black;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
