#8 student dashboard (WIP)

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,12 +1,26 @@
 <div class="first-row">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
-          routerLink="company-list">
-    <mat-icon>home</mat-icon>
-  </button>
+  <div *ngIf="userService.isLoggedIn$ | async; then routeDashboard; else routeCompanyList"></div>
+  <ng-template #routeDashboard>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+            routerLink="studentDashboard">
+      <mat-icon>home</mat-icon>
+    </button>
+    <a href="student-dashboard" style="text-decoration: none">Job Application Manager</a>
+    <div *ngIf="userService.isLoggedIn$ | async; then showHello;"></div>
+    <ng-template #showHello>
+      | <a [ngStyle]="{'font-size': '14px'}">Hello, {{getUsername()}}!</a>
+    </ng-template>
+  </ng-template>
+  <ng-template #routeCompanyList>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+            routerLink="company-lists">
+      <mat-icon>home</mat-icon>
+    </button>
     <a href="company-list" style="text-decoration: none">Job Application Manager</a>
     <div *ngIf="userService.isLoggedIn$ | async; then showHello;"></div>
-  <ng-template #showHello>
-    | <a [ngStyle]="{'font-size': '14px'}">Hello, {{getUsername()}}!</a>
+    <ng-template #showHello>
+      | <a [ngStyle]="{'font-size': '14px'}">Hello, {{getUsername()}}!</a>
+    </ng-template>
   </ng-template>
 
   <span class="example-spacer"></span>
