--- a/frontend/src/app/company-list/company-list.component.scss
+++ b/frontend/src/app/company-list/company-list.component.scss
@@ -6,3 +6,13 @@
   border-top: 1px solid transparent;
   cursor: pointer;
 }
+
+.button-new {
+  margin-top: 10px;
+  border: 1px solid black;
+  background-color: #a6d8d4;
+  color: black;
+  padding: 14px 28px;
+  font-size: 14px;
+  cursor: pointer;
+}
