--- a/frontend/src/app/internship-list/internship-list.component.html
+++ b/frontend/src/app/internship-list/internship-list.component.html
@@ -1,51 +1,65 @@
-<table mat-table style="width: 100%" [dataSource]="internships" matSort class="mat-elevation-z8">
+<div style="margin: 35px">
+  <table mat-table class="mat-elevation-z8" [dataSource]="internships">
 
-  <!-- Title Column -->
-  <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-  </ng-container>
+    <!-- Title Column -->
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
+      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+    </ng-container>
 
-  <!-- Application Status -->
-  <ng-container matColumnDef="application_status">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Application Status</th>
-    <td mat-cell *matCellDef="let element"> {{element.application_status}} </td>
-  </ng-container>
+    <!-- Application Status -->
+    <ng-container matColumnDef="application_status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Application Status</th>
+      <td mat-cell
+          *matCellDef="let element"> {{this.internshipService.mapStatusAbbToFull(element.application_status)}} </td>
+    </ng-container>
 
-  <!-- Approval Status -->
-  <ng-container matColumnDef="approval_status">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Approval Status</th>
-    <td mat-cell *matCellDef="let element">{{element.approval_status}}</td>
-  </ng-container>
+    <!-- Approval Status -->
+    <ng-container matColumnDef="approval_status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Approval Status</th>
+      <td mat-cell
+          *matCellDef="let element">{{this.internshipService.mapApprovalStatusToFull(element.approval_status)}}</td>
+    </ng-container>
 
-  <!-- Company -->
-  <ng-container matColumnDef="company">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
-    <td mat-cell *matCellDef="let element">{{element.company.name}}</td>
-  </ng-container>
+    <!-- Company -->
+    <ng-container matColumnDef="company">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
+      <td mat-cell *matCellDef="let element">{{element.company.name}}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="approve">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-button color="primary" (click)="approve(element.pk)" *ngIf="is_lecturer">Approve</button>
-    </td>
-  </ng-container>
+    <!--  Approve/Reject Button when lecturer-->
+    <ng-container matColumnDef="approve">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button color="primary" (click)="this.approve(element.pk)" *ngIf="this.userService.isLecturer()">
+          Approve
+        </button>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="reject">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button color="warn" (click)="this.reject(element.pk)" *ngIf="this.userService.isLecturer()">Reject
+        </button>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="reject">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-button color="primary" (click)="reject(element.pk)" *ngIf="is_lecturer">Reject</button>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="update">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-button color="primary" [routerLink]="['/internship-form', element.pk]" *ngIf="!is_lecturer">Edit Application Status</button>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="update">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button color="primary" [routerLink]="['/internship-form', element.pk]"
+                *ngIf="!this.userService.isLecturer()">Edit Application Status
+        </button>
+      </td>
+    </ng-container>
 
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-<button mat-button routerLink="/internship-form">New Internship</button>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <button class="button-new" mat-button routerLink="/internship-form" *ngIf="!this.userService.isLecturer()">New
+    Internship
+  </button>
+</div>
+
+
