--- a/frontend/src/app/vacancies-list/vacancies-list.component.html
+++ b/frontend/src/app/vacancies-list/vacancies-list.component.html
@@ -29,6 +29,11 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <mat-paginator [length]="length"
+                 [pageSize]="pageSize"
+                 [pageSizeOptions]="[5, 10, 50, 100]"
+                 (page)="handlePageEvent($event)"
+                 aria-label="Select page"></mat-paginator>
   <button class="button-new" mat-button color="primary" routerLink="/vacancies-form">Report Vacancy</button>
 </div>
 
